--- a/libs/CSS/main.css
+++ b/libs/CSS/main.css
@@ -31,7 +31,8 @@ body {
   font-weight: 400;
   line-height: 1.75;
   color: var(--color-text2);
-  background-color: var(--color-btn-hover);
+  /* background-color: var(--color-btn-hover); */
+  background-color: seagreen;
 }
 
 p {
@@ -54,6 +55,10 @@ a {
 ul {
   list-style: none;
   padding: 0;
+}
+
+.link-redirection {
+  padding: 0 0.2rem;
 }
 
 /*? buttons */
@@ -103,7 +108,6 @@ a,
   width: 500px;
   max-width: var(--max-width);
   height: 500px;
-  border: solid red 1.3px;
   display: grid;
   align-items: center;
   align-content: space-evenly;
@@ -128,9 +132,9 @@ small {
 .inputData {
   height: 2rem;
   border-radius: var(--border-radius);
-  background-color: #554994;
-  color: #ffffff;
-  font-size: 1.3rem;
+  background-color: bisque;
+  color: black;
+  font-size: 1.2rem;
 }
 
 .inputData::placeholder {
@@ -181,11 +185,21 @@ small {
 
 /* * Page App */
 .form-app {
+  display: grid;
+  grid-template-rows: 1fr;
   text-align: center;
+  margin-bottom: 50px;
+}
+
+@media screen and (min-width: 768px) {
+  .form-app {
+    grid-template-rows: 3fr 1fr;
+  }
+
+
 }
 
 .form-app .form-group {
-  border: solid red 1.3px;
   display: grid;
   grid-template-columns: 3fr 1fr;
   column-gap: 0.4rem;
@@ -201,44 +215,97 @@ small {
 
 table {
   border-collapse: collapse;
-  margin: 0 auto;
+  margin: 30px auto;
 }
 
 .container-task {
-  border: solid yellow 1.3px;
-  max-width: var(--max-width);
-  margin: 2rem auto;
-  display: grid;
-  grid-template-columns: 3fr 1fr;
-  grid-gap: 10px;
-  justify-content: center;
+  padding: 0.5rem;
+  max-width: 80vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.container-task p {
+  line-height: 1.3rem;
+  width: 80%;
+  max-width: 100%;
+  word-wrap: break-word;
 }
 
 .container-task .listBtn {
-  display: grid;
-  column-gap: 5px;
-  grid-row: 1/2;
-  grid-column: 2/3;
-  grid-template-columns: auto 1fr;
-  align-content: center;
-  justify-self: end;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .listBtn .btn-edit,
 .btn-delete {
+  font-size: 1rem;
   background-color: transparent;
-  font-size: 1.2rem;
+  cursor: pointer;
+  border: transparent;
+  border-radius: var(--border-radius);
+  padding: 0.3rem;
+  box-shadow: var(--shadow);
+  display: inline-block;
 }
 
-.listBtn .btn-edit i {
-  color: var(--color-secondary);
+.btn-delete {
+  color: fuchsia;
 }
 
-.listBtn .btn-delete i {
-  color: red;
+.btn-edit {
+  color: green;
+}
+
+.separateur {
+  width: 100%;
+  border: #FEF5AC 0.3px solid;
 }
 
 .seDeconecter {
+  margin: 0.5rem auto;
+  position: absolute;
+  left: 10px;
+  bottom: 15px;
+}
+
+/* * Page Edit */
+
+.form-edit {
+  margin: 2rem auto;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
+.container-input {
+  border: solid red 1.3px;
   margin: 0 auto;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  justify-content: center;
+}
+
+.form-group-edit {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  column-gap: 0.4rem;
+  height: 35px;
+}
+
+.redirection-app {
   text-align: center;
+}
+
+.error {
+  background-color: darkred;
+  color: white;
+}
+
+.inputEditTask {
+  background-color: bisque;
+  color: black;
+  font-size: 1.2rem;
+  padding: 0.5rem;
 }
