--- a/libs/CSS/main.css
+++ b/libs/CSS/main.css
@@ -255,7 +255,7 @@ small {
 }
 
 table {
-  border-collapse: collapse;
+  /* border-collapse: collapse; */
   margin: 30px auto;
 }
 
@@ -293,7 +293,7 @@ table {
 }
 
 .btn-delete {
-  color: fuchsia;
+  color: darkred;
 }
 
 .btn-edit {
